--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,54 +1,42 @@
-body{
+body {
 	background-color: #ececec;
 }
 
-.header{
-	width:100%;                /* Establecemos que el Header Utilice el 100% del Documento */
-	background-color: #ffffcc; /* Color de Fondo del Header */
-	line-height: 700% ;        /* Establecemos que el Height Utilice el 700% del Documento */
-	text-align: center;        /* El Texto que Vaya dentro se Alineara al Centro */
+.jumbotron {
+	background-color: #FFFFCC !important;
 }
 
-.header > .texto-encabezado{
-	color: #000000;  /* Color de Letra del Texto en el Header */
-	font-size: 250%; /* Tamaño de la Letra del Texto del Header */
+.text-center {
+	text-align: center !important
 }
 
-@media (max-width: 50%) { 
-	.header > .texto-encabezado{
-		color: #000000;  /* Color de Letra del Texto en el Header */
-		font-size: 200%; /* Tamaño de la Letra del Texto del Header */
-	}
+.text-bold {
+	font-weight: bold !important;
 }
 
-.texto-relleno{
-	color: #000000;  /* Color de Letra del Texto en el Header */
-	font-size: 160%; /* Tamaño de la Letra del Texto del Header */
-}
-
-#modal-encabezado{
+#modal-encabezado {
 	background-color: #ffffcc;
 	text-align: center;
 	border-radius: 0;
 	color: #000000;
 }
 
-#modal-cuerpo{
+#modal-cuerpo {
 	background-color: #ececec;
-	font-family:"Times New Roman", serif}
+	font-family: "Times New Roman", serif
 }
 
-#modal-pie{
+#modal-pie {
 	background-color: #ececec;
 	border-radius: 0;
 }
 
-.texto{
+.texto {
 	text-align: justify;
 	font-size: 97%;
 }
 
-.bienvenida{
+.bienvenida {
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 30px;
